renamed starter folder to assets and added js file in js folder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
-  <script src="./starter/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
